--- a/css/style.css
+++ b/css/style.css
@@ -1018,7 +1018,7 @@ form .textarea textarea:focus::placeholder {
   top: 4px;
   z-index: 99;
 }
-
+/*
 .carousel-indicators [data-bs-target] {
   width: 30px;
   height: 10px;
@@ -1076,8 +1076,11 @@ form .textarea textarea:focus::placeholder {
   display: flex;
   gap: 0.3em;
 }
+*/
+
 
 /* carousel */
+/*
 .carousel{
     height: 100vh;
     margin-top: -9px;
@@ -1140,7 +1143,10 @@ form .textarea textarea:focus::placeholder {
     border: 1px solid #fff;
     color: #eee;
 }
+
+*/
 /* thumbail */
+/*
 .thumbnail{
     position: absolute;
     bottom: 50px;
@@ -1174,8 +1180,10 @@ form .textarea textarea:focus::placeholder {
 }
 .thumbnail .item .content .description{
     font-weight: 300;
-}
+}*/
+
 /* arrows */
+/*
 .arrows{
     position: absolute;
     top: 80%;
@@ -1203,12 +1211,12 @@ form .textarea textarea:focus::placeholder {
     color: #000;
 }
 
-/* animation */
+/* animation 
 .carousel .list .item:nth-child(1){
     z-index: 1;
 }
 
-/* animation text in first item */
+animation text in first item
 
 .carousel .list .item:nth-child(1) .content .author,
 .carousel .list .item:nth-child(1) .content .title,
@@ -1240,7 +1248,7 @@ form .textarea textarea:focus::placeholder {
 .carousel .list .item:nth-child(1) .content .buttons{
     animation-delay: 1.8s!important;
 }
-/* create animation when next click */
+create animation when next click 
 .carousel.next .list .item:nth-child(1) img{
     width: 150px;
     height: 220px;
@@ -1281,7 +1289,7 @@ form .textarea textarea:focus::placeholder {
     from{
         transform: translateX(150px);
     }
-}
+}*/
 
 /* running time */
 
