--- a/css/style.css
+++ b/css/style.css
@@ -1317,6 +1317,61 @@ create animation when next click .carousel.next .list .item:nth-child(1) img {
   opacity: 0.9;
 }
 
+.faq-container {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: var(--bg-color);
+  color: var(--font-color);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin-top: 5rem;
+}
+
+.faq-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 5rem;
+  line-height: 5rem;
+  font-size: 2.5rem;
+  text-align: center;
+  z-index: 10;
+}
+
+.faq-box {
+  position: relative;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
+.faq-header {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 5rem;
+  height: var(--box-header-ht);
+  line-height: var(--box-header-ht);
+  border-radius: 3px 3px 0 0;
+  text-align: center;
+  background-color: var(--content-header);
+}
+
+.faq-content {
+  padding: 2rem 1.5rem;
+  background-color: var(--content-bg-color);
+  border-top: 0; 
+  border-radius: 0 0 5px 5px;
+}
+
+@media only screen and (max-width: 768px) {
+  .faq-content {
+    font-size: 16px;
+  }
+}
+
+
 /*-----------------------------------*\
   #ABOUT
 \*-----------------------------------*/
