--- a/css/style.css
+++ b/css/style.css
@@ -1896,202 +1896,429 @@ create animation when next click .carousel.next .list .item:nth-child(1) img {
   }
 }
 
-/* Courses */
-.courses-item img {
-  position: relative;
-  margin-top: 40px;
-  transition: .5s;
+/*** Training Start ***/
+.training-carousel .owl-stage-outer {
+  margin-top: 30px;
 }
 
-.courses-list-item img {
-  position: relative;
-  transition: .5s;
-}
-
-.courses-item .courses-text,
-.courses-list-item .courses-text {
+.training-carousel .owl-nav .owl-prev,
+.training-carousel .owl-nav .owl-next {
   position: absolute;
-  width: 100%;
-  height: calc(100% + 86px);
   top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  background: linear-gradient(to bottom, rgba(18, 15, 45, 0), #120f2d);
-  transition: .5s;
-  z-index: 1;
+  padding: 10px 35px;
+  border: 1px solid var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-secondary);
+  border-radius: 50px;
+  transition: 0.5s;
 }
 
-.courses-list-item .courses-text {
-  height: 100%;
+.training-carousel .owl-nav .owl-prev {
+  left: 0 !important;
 }
 
-.courses-item:hover img {
-  margin-top: 0px;
+.training-carousel .owl-nav .owl-next {
+  right: 0;
 }
 
-.courses-list-item:hover img {
+.training-carousel .owl-nav .owl-prev:hover,
+.training-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+
+.training .training-item .training-img {
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.training .training-item .training-img img {
+  transition: 0.5s;
+}
+
+.training .training-item:hover .training-img img {
   transform: scale(1.2);
 }
+/*** Training End ***/
 
-.courses-item:hover .courses-text {
-  height: calc(100% + 40px);
+
+
+/*** Dance Class Start ***/
+.class-carousel .owl-stage-outer {
+  margin-top: 30px;
 }
 
-.team-carousel .owl-nav,
-.related-carousel .owl-nav {
+.class-carousel .owl-nav .owl-prev,
+.class-carousel .owl-nav .owl-next {
   position: absolute;
-  width: 100%;
-  height: 60px;
-  top: calc(50% - 30px);
-  left: 0;
-  display: flex;
-  justify-content: space-between;
-  z-index: 1;
+  top: 0;
+  padding: 10px 35px;
+  border: 1px solid var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-secondary);
+  border-radius: 50px;
+  transition: 0.5s;
 }
 
-.team-carousel .owl-nav .owl-prev,
-.team-carousel .owl-nav .owl-next,
-.related-carousel .owl-nav .owl-prev,
-.related-carousel .owl-nav .owl-next {
+.class-carousel .owl-nav .owl-prev {
+  left: 0 !important;
+}
+
+.class-carousel .owl-nav .owl-next {
+  right: 0;
+}
+
+.class-carousel .owl-nav .owl-prev:hover,
+.class-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+
+.class .class-item .class-img {
   position: relative;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #FFFFFF;
-  background: #2878EB;
-  font-size: 22px;
-  transition: .5s;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.class .class-item .class-img img {
+  transition: 0.5s;
+}
+
+.class .class-item:hover .class-img img {
+  transform: scale(1.3);
+}
+/*** Dance Class End ***/
+
+
+/*** Blog Start ***/
+.blog-carousel .owl-stage-outer {
+  margin-top: 30px;
+}
+
+.blog-carousel .owl-nav .owl-prev,
+.blog-carousel .owl-nav .owl-next {
+  position: absolute;
+  top: 1px;
+  padding: 10px 35px;
+  border: 1px solid var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-secondary);
+  border-radius: 50px;
+  transition: 0.5s;
+}
+
+.blog-carousel .owl-nav .owl-prev {
+  left: 0 !important;
+}
+
+.blog-carousel .owl-nav .owl-next {
+  right: 0;
+}
+
+.blog-carousel .owl-nav .owl-prev:hover,
+.blog-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+
+.blog .blog-item .blog-img {
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.blog .blog-item .blog-img img {
+  transition: 0.5s;
+}
+
+.blog .blog-item:hover .blog-img img {
+  transform: scale(1.3);
+}
+/*** Blog End ***/
+
+/*** Team Start ***/
+.team-carousel .owl-stage-outer {
+  margin-top: 30px;
+}
+.team-carousel .owl-nav .owl-prev,
+.team-carousel .owl-nav .owl-next {
+  position: absolute;
+  top: 1px;
+  padding: 10px 35px;
+  border: 1px solid var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-secondary);
+  border-radius: 50px;
+  transition: 0.5s;
+}
+
+.team-carousel .owl-nav .owl-prev {
+  left: 0 !important;
+}
+
+.team-carousel .owl-nav .owl-next {
+  right: 0;
 }
 
 .team-carousel .owl-nav .owl-prev:hover,
-.team-carousel .owl-nav .owl-next:hover,
-.related-carousel .owl-nav .owl-prev:hover,
-.related-carousel .owl-nav .owl-next:hover {
-  background: #F14D5D;
+.team-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
 }
 
-.testimonial-carousel .owl-item img {
-  width: 80px;
-  height: 80px;
-}
-
-.testimonial-carousel .owl-nav {
-  position: absolute;
-  width: 120px;
-  height: 60px;
-  top: 0;
-  right: 0;
-  display: flex;
-  z-index: 1;
-}
-
-.testimonial-carousel .owl-nav .owl-prev,
-.testimonial-carousel .owl-nav .owl-next {
+.team .team-carousel .team-item .team-img {
   position: relative;
-  width: 60px;
-  height: 60px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.team .team-carousel .team-item .team-img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5);
+  transition: 0.5s;
+  z-index: 2;
+}
+
+.team .team-carousel .team-item .team-img .team-icon {
+  position: absolute;
+  bottom: -100%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 25px;
+  display: flex;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: 3;
+}
+
+.team .team-carousel .team-item:hover .team-img .team-icon {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 1;
+}
+
+.team .team-carousel .team-item .team-content {
+  position: relative;
+  background: var(--bs-secondary);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  z-index: 1;
+  transition: 0.5s;
+}
+
+.team .team-carousel .team-item .team-content::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background: var(--bs-primary) !important;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  transition: 0.5s;
+  z-index: -1;
+}
+
+.team .team-carousel .team-item:hover .team-content a,
+.team .team-carousel .team-item:hover .team-content p {
+  color: var(--bs-white) !important;
+}
+
+.team .team-carousel .team-item:hover .team-content::after {
+  height: 100% !important;
+}
+
+.team .team-carousel .team-item .team-img img {
+  transition: 0.5s;
+}
+
+.team .team-carousel .team-item:hover .team-img img {
+  transform: scale(1.1);
+}
+/*** Team End ***/
+
+
+/*** Vidie Gallery Start ***/
+/*** Youtube Video start ***/
+.gallery .tab-class {
+  text-align: start !important;
+}
+
+.gallery .nav-item {
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+}
+
+.gallery .nav-item a span {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #FFFFFF;
-  background: #2878EB;
-  font-size: 22px;
-  transition: .5s;
 }
 
-.testimonial-carousel .owl-nav .owl-prev,
-.testimonial-carousel .owl-nav .owl-next:hover {
-  background: #F14D5D;
+.gallery .nav-item a.active {
+  background: var(--bs-primary) !important;
 }
 
-.testimonial-carousel .owl-nav .owl-prev:hover {
-  background: #2878EB;
+.gallery .nav-item a.active span {
+  color: var(--bs-white) !important;
 }
 
-/* Team Section */
-#team .team-block {
-  box-shadow: 0 0 35px rgba(50, 13, 13, 0.1);
-  height: 254px;
-  overflow: hidden;
+
+.video {
   position: relative;
-  width: 100%;
 }
 
-@media (max-width: 991px) {
-  #team .team-block {
-    margin-bottom: 30px;
-  }
-}
-
-#team .team-block img {
-  width: 100%;
-}
-
-#team .team-block .team-content {
-  background: #fff none repeat scroll 0 0;
-  bottom: 0;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.19);
-  bottom: -147px;
-  padding: 20px 0;
+.video .btn-play {
   position: absolute;
-  width: 100%;
-  transition: all 0.5s ease-in-out 0s;
-}
-
-#team .team-block .team-content ul {
+  z-index: 3;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-sizing: content-box;
   display: block;
-  width: 100%;
+  width: 23px;
+  height: 44px;
+  border-radius: 50%;
+  transition: 0.5s;
+  
+
 }
 
-#team .team-block .team-content ul li {
-  display: inline-block;
-}
-
-#team .team-block .team-content ul li a {
-  color: #626262;
-}
-
-#team .team-block .team-content ul li a .fa {
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-  transition: 0.3s;
-}
-
-#team .team-block .team-content ul li a .fa:hover {
-  color: #f68122;
-}
-
-#team .team-block .team-content ul>span {
-  display: inline-block;
-  font-size: 14px;
-  font-weight: 300;
-  letter-spacing: 0.5px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-}
-
-#team .team-block:hover .team-content {
-  bottom: 0px;
-  transition: all 0.5s ease-in-out 0s;
-}
-
-.team-carousel .owl-nav {
+.video .btn-play:before {
+  content: "";
   position: absolute;
-  width: 60px;
-  height: 180px;
-  top: calc(50% - 90px);
+  z-index: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 70px;
+  height: 70px;
+  background: var(--bs-white);
+  border-radius: 50%;
+  animation: pulse-border 1500ms ease-out infinite;
+  transition: 0.5s;
+}
 
-  .hero-content {
-    max-width: 85%;
-    margin-inline: auto;
+.video .btn-play:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 50px;
+  height: 50px;
+  background: var(--bs-secondary);
+  border-radius: 50%;
+  transition: all 300ms;
+}
+
+.video .btn-play span {
+  display: block;
+  position: relative;
+  z-index: 3;
+  width: 0;
+  height: 0;
+  border-left: 23px solid var(--bs-primary);
+  border-top: 12px solid transparent;
+  border-bottom: 12px solid transparent;
+  margin-left: 5px;
+}
+
+@keyframes pulse-border {
+  0% {
+      transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+      opacity: 1;
+  }
+
+  100% {
+      transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+      opacity: 0;
   }
 }
+
+#videoModal {
+  z-index: 99999;
+}
+
+#videoModal .modal-dialog {
+  position: relative;
+  max-width: 800px;
+  margin: 60px auto 0 auto;
+}
+
+#videoModal .modal-body {
+  position: relative;
+  padding: 0px;
+}
+
+#videoModal .close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  right: 0px;
+  top: -30px;
+  z-index: 999;
+  font-size: 30px;
+  font-weight: normal;
+  color: #ffffff;
+  background: #000000;
+  opacity: 1;
+}
+/*** Youtube Video End ***/
+
+/*** Vidieo Gallery End ***/
+
+/*** Testimonial Start ***/
+.testimonial-carousel .owl-stage-outer {
+  margin-top: 30px;
+}
+.testimonial-carousel .owl-nav .owl-prev,
+.testimonial-carousel .owl-nav .owl-next {
+  position: absolute;
+  top: 1px;
+  padding: 10px 35px;
+  border: 1px solid var(--bs-secondary);
+  color: var(--bs-white);
+  background: var(--bs-secondary);
+  border-radius: 50px;
+  transition: 0.5s;
+}
+
+.testimonial-carousel .owl-nav .owl-prev {
+  left: 0 !important;
+}
+
+.testimonial-carousel .owl-nav .owl-next {
+  right: 0;
+}
+
+.testimonial-carousel .owl-nav .owl-prev:hover,
+.testimonial-carousel .owl-nav .owl-next:hover {
+  box-shadow: inset 100px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+/*** Testimonial End ***/
+
+
+/*** Contact Start ***/
+.contact button.btn.btn-primary.w-100:hover {
+  box-shadow: inset 700px 0 0 0 var(--bs-light) !important;
+  color: var(--bs-primary) !important;
+}
+/*** Contact End ***/
 
 /**
  * responsive for large than 992px screen
