--- a/css/style.css
+++ b/css/style.css
@@ -1317,54 +1317,94 @@ create animation when next click .carousel.next .list .item:nth-child(1) img {
   opacity: 0.9;
 }
 
-.faq-container {
-
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  min-height: 100vh;
-  margin-top: 5rem;
+#frequent-asked {
+  font-family: "IBM Plex Sans", sans-serif;
+  background-color: rgba(0,0,0,.1);
 }
 
-.faq-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 5rem;
-  line-height: 5rem;
-  font-size: 2.5rem;
+h2 {
+  margin: 20px auto 80px;
+  font-size: 38px;
+  font-weight: 300;
   text-align: center;
-  z-index: 10;
+  letter-spacing: 2px;
+  line-height: 1.5;
 }
 
-.faq-box {
+details {
+  width: 75%;
+  min-height: 5px;
+  max-width: 700px;
+  padding: 45px 70px 45px 45px;
+  margin: 0 auto;
   position: relative;
-  width: 80%;
-  margin-bottom: 2rem;
+  font-size: 22px;
+  border: 1px solid rgba(0,0,0,.1);
+  border-radius: 15px;
+  box-sizing: border-box;
+  transition: all .3s;
 }
 
-.faq-header {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 5rem;
-  height: var(--box-header-ht);
-  line-height: var(--box-header-ht);
-  border-radius: 3px 3px 0 0;
-  text-align: center;
-  background-color: var(--content-header);
+details + details {
+  margin-top: 20px;
 }
 
-.faq-content {
-  padding: 2rem 1.5rem;
-  background-color: var(--content-bg-color);
-  border-top: 0; 
-  border-radius: 0 0 5px 5px;
+details[open] {
+  min-height: 50px;
+  background-color: #f6f7f8;
+  box-shadow: 2px 2px 20px rgba(0,0,0,.2);
 }
 
-@media only screen and (max-width: 768px) {
-  .faq-content {
-    font-size: 16px;
-  }
+details p {
+  color: #96999d;
+  font-weight: 300;
+}
+
+summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+summary:focus {
+  outline: none;
+  
+}
+
+summary:focus::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-shadow: 0 0 0 5px rebeccapurple;
+}
+
+summary::-webkit-details-marker {
+  display: none
+}
+
+.control-icon {
+  fill: rebeccapurple;
+  transition: .3s ease;
+  pointer-events: none;
+}
+
+.control-icon-close {
+  display: none;
+}
+
+details[open] .control-icon-close {
+  display: initial;
+  transition: .3s ease;
+}
+
+details[open] .control-icon-expand {
+  display: none;
 }
 
 .tabs-main{
