--- a/css/style.css
+++ b/css/style.css
@@ -449,127 +449,229 @@ form .textarea textarea:focus::placeholder {
   transform: scale(0.97);
 }
 
-/* display none until init */
-.owl-carousel{
-	display: none;
-	position: relative;
-	width: 100%;
-	-ms-touch-action: pan-y;
-  
-}
-.owl-carousel .owl-wrapper{
-	display: none;
-	position: relative;
-	-webkit-transform: translate3d(0px, 0px, 0px);
-  
-}
-.owl-carousel .owl-wrapper-outer{
+$accent: #eceff1;
+$progress: #33a5ff;
+$progress2: #4dcb52;
+$testimonialCount: 4;
+$testimonialPause: 15;
+$testimonialSlide: .25;
+$profileImgSize: 48;
+$progressStrokeW: 3.5px;
+$pi: 3.14159265;
+#slider {
 	overflow: hidden;
-	position: relative;
-	width: 100%;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 400;
+	color: darken($accent,40%);
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
-.owl-carousel .owl-item img{
-    width: 45px;
-    padding:7px!important;
-    background-color:#f6f5ff;
-		margin-left:0px!important;
-    border-radius:15px;
+#testimonials {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	width: 250px;
+	background: $accent;
+	border-radius: 15px;
+	overflow: hidden;
+	ul {
+		display: flex;
+		margin: 0;
+		padding: 0;
+		width: calc(100% * #{$testimonialCount});
+		height: 100%;
+		padding-left: 0;
+		list-style: none;
+		animation: testimonial-slide #{($testimonialCount * ($testimonialPause + $testimonialSlide)) * 1s} infinite;
+		li {
+			display: flex;
+			flex-direction: column;
+			padding: 16px;
+			width: calc(100% / #{$testimonialCount});
+			flex-shrink: 0;
+			user-select: none;
+			box-sizing: border-box;
+			line-height: 1.5;
+			.testimonial-body {
+				flex-grow: 1;
+				margin: 0;
+				quotes: "“" "”" "‘" "’";
+				&:before, &:after {
+					display: inline-block;
+					position: relative;
+					transform: scale(1.25);
+				}
+				&:before { content: open-quote; left: -1px; }
+				&:after { content: close-quote; right: -1px; }
+			}
+			.testimonial-profile {
+				position: relative;
+				white-space: nowrap;
+				margin-top: .75rem;
+				.img-cover {
+					position: absolute;
+					width: #{$profileImgSize + "px"};
+					height: #{$profileImgSize + "px"};
+					border-radius: 1000px;
+					box-shadow: 0 7px 10px -2px rgba(darken($accent,50%),0.55);
+					// transition: all 0s ease-in-out;
+					transition: all 0.15s ease-in-out;
+					background: rgba(0, 0, 0, 0.375);
+					opacity: 0;
+					z-index: 1;
+					&:after {
+						content: "\f04b";
+						display: inline-block;
+						font-family: FontAwesome;
+						font-size: 18px;
+						color: #fff;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%,-50%);
+						transition: all 0.15s ease-in-out;
+						z-index: 999;
+					}
+				}
+				svg {
+					position: absolute;
+					width: #{$profileImgSize + "px"};
+					height: #{$profileImgSize + "px"};
+					top: 0;
+					left: 0;
+					filter: drop-shadow(0 0 4px rgba($progress,.5));
+					transform: rotate(90deg);
+					overflow: visible;
+					z-index: 1;
+					animation: testimonial-progress-svg #{($testimonialPause + $testimonialSlide) * 1s} /*linear*/ infinite;
+					pointer-events: none;
+					circle {
+						transform-origin: center;
+						cx: $profileImgSize / 2;
+						cy: $profileImgSize / 2;
+						r: $profileImgSize / 2;
+						stroke-linecap: round;
+						fill: none;
+						stroke: $progress;
+						stroke-width: 4px;
+						stroke-dasharray: $profileImgSize * $pi;
+						stroke-dashoffset: $profileImgSize * $pi;
+						animation: testimonial-progress-circle #{($testimonialPause + $testimonialSlide) * 1s} /*linear*/ infinite;
+					}
+				}
+				img, span, small {
+					float: left;
+					white-space: inherit;
+				}
+				img {
+					margin-right: .75rem;
+					width: #{$profileImgSize + "px"};
+					height: #{$profileImgSize + "px"};
+					border-radius: 1000px;
+					box-shadow: 0 7px 10px -2px rgba(darken($accent,50%),0.55);
+					// cursor: pointer;
+					transition: all 0.1s ease-in-out;
+					// @media (min-width: 768px) {
+					// 	&:hover { transform: scale(1.1); }
+					// }
+				}
+				span {
+					vertical-align: top;
+					font-weight: 500;
+					color: darken($accent,50%);
+				}
+				small {
+					font-weight: 300;
+					color: darken($accent,30%);
+					&[data-social] {
+						&:before {
+							display: inline-block;
+							margin-right: 10px;
+							font-family: "Font Awesome 5 Brands";
+							font-size: inherit;
+							transform: scale(1.1);
+						}
+						&[data-social="facebook"]:before {
+							content: '\f082';
+							color: #3b5998;
+						}
+						&[data-social="twitter"]:before {
+							content: '\f099';
+							color: #1da1f2;
+						}
+						&[data-social="google"]:before {
+							content: '\f0d5';
+							color: #ea4335;
+						}
+					}
+				}
+			}
+		}
+		// @media (min-width: 768px) {
+			&:hover {
+				&, svg, circle {
+					animation-play-state: paused !important;
+				}
+				li .testimonial-profile .img-cover {
+					opacity: 1;
+					transition: all 0.15s ease-in-out;
+					&:after {
+						content: "\f04c";
+					}
+				}
+			}
+		// }
+	}
 }
-.owl-carousel .allitem {
-  padding: 25px;
-	border-radius:0px;
+@keyframes testimonial-slide {
+	@for $i from 0 through ($testimonialCount - 1) {
+		#{$i * (100% / $testimonialCount)}, #{($i * (100% / $testimonialCount)) + (($testimonialPause / ($testimonialCount * ($testimonialPause + $testimonialSlide))) * 100%)} {
+			transform: translateX(calc(#{$i * -1} * (100% / #{$testimonialCount})));
+		}
+	}
+	100% { transform: translateX(0); }
 }
-.owl-carousel .owl-item{
-	float: left;
-	border-radius:5px;
-  border:1px solid rgba(87,59,255,0.21);
+@keyframes testimonial-progress-svg {
+	0% {
+		filter: drop-shadow(0 0 4px rgba($progress,.5));
+	}
+	#{($testimonialPause / ($testimonialPause + $testimonialSlide)) * 50%} {
+		filter: drop-shadow(0 0 4px rgba(mix($progress,$progress2),.5));
+	}
+	#{($testimonialPause / ($testimonialPause + $testimonialSlide)) * 100%}, #{((($testimonialPause / ($testimonialPause + $testimonialSlide)) + 1) / 2) * 100%} {
+		filter: drop-shadow(0 0 4px rgba($progress2,.5));
+	}
+	#{((($testimonialPause / ($testimonialPause + $testimonialSlide)) + 1) / 2) * 100%}, 100% {
+		filter: drop-shadow(0 0 4px rgba($progress2,.5));
+	}
 }
-.owl-controls .owl-page,
-.owl-controls .owl-buttons div{
-	cursor: pointer;
-}
-.owl-controls {
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 50);
-}
-
-/* mouse grab icon */
-.grabbing { 
-    cursor:url(grabbing.png) 8 8, move;
-}
-
-/* fix */
-.owl-carousel  .owl-wrapper,
-.owl-carousel  .owl-item{
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility:    hidden;
-	-ms-backface-visibility:     hidden;
-  -webkit-transform: translate3d(0,0,0);
-  -moz-transform: translate3d(0,0,0);
-  -ms-transform: translate3d(0,0,0);
-}
-
-
-.user-blog {
-    background: #0000;
-    padding: 0px 0px 0px;
-}
-
-div#owl-demo1 .item {
-    padding: 0 5px;
-}
-.blog-allof {
-  background: #fff;
-  border-radius: 10px;
-  margin-left:30px!important;
-}
-
-.discretion-blog {
-    padding: 0px;
-	align-items:left;
-}
-
-.discretion-blog p {
-  font-size: 16px;
-  color:#595665;
-	padding-bottom:15px !important;
-	margin-top:0px;
-  line-height: 26px;
-  font-family: 'DM Sans', Helvetica, Arial, Lucida, sans-serif;
-}
-
-.discretion-blog h3 {
-  color: #1F2D3D;
-  font-size: 20px;
-  font-weight: 700;
-	margin-top:0px;
-	margin-bottom:10px;
-  line-height: 26px;
-  font-family: 'DM Sans', Helvetica, Arial, Lucida, sans-serif;
-  margin-top: 25px !important;
-  margin-bottom: 20px !important;
-}
-
-.et_pb_module.et_pb_text_align_center {
-    text-align: left;
-}
-
-
-
-
-.user-blog .owl-theme .owl-controls .owl-page span {
-    width: 17px;
-    height: 17px;
-    background: #454343;
-    opacity: 1;
-}
-.user-blog .owl-theme .owl-controls .owl-page.active span, .user-blog .owl-theme .owl-controls.clickable .owl-page:hover span {
-    background: #82b53f;
-}
+@keyframes testimonial-progress-circle {
+	0% {
+		stroke: $progress;
+		stroke-width: 3px;
+		stroke-dasharray: $profileImgSize * $pi;
+		stroke-dashoffset: #{$profileImgSize * $pi - 1};
+		transform: rotate(0deg);
+	}
+	#{($testimonialPause / ($testimonialPause + $testimonialSlide)) * 50%} {
+		stroke-dasharray: $profileImgSize * $pi / 3.6;
+		stroke-dashoffset: #{($profileImgSize * $pi - 1) / 4};
+	}
+	#{($testimonialPause / ($testimonialPause + $testimonialSlide)) * 100%}, #{((($testimonialPause / ($testimonialPause + $testimonialSlide)) + 1) / 2) * 100%} {
+		stroke: $progress2;
+		stroke-width: $progressStrokeW;
+		stroke-dasharray: $profileImgSize * $pi;
+		stroke-dashoffset: 0;
+		transform: rotate(2340deg);
+	}
+	#{((($testimonialPause / ($testimonialPause + $testimonialSlide)) + 1) / 2) * 100%}, 100% {
+		stroke: $progress;
+		stroke-width: 0px;
+		stroke-dashoffset: #{$profileImgSize * $pi - 1};
+		transform: rotate(0deg);
+	}
+} 
 
 section {
   --section-divider-height: 60px; 
