--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,6 @@ samp {
   overflow: hidden;
   background: #201c29;
   color: #fff;
-  font-family: 'Open Sans', Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -321,8 +320,7 @@ samp {
   z-index: 10;
   height: 20px;
   width: 20px;
-  top: 50%;
-  left: 50%;
+  top: 50%;.3
 	transform: translate(-50%, -50%);
   background-image: linear-gradient(45deg, #ff049f, #9a0fe0 45%);
   border-radius: 50%;
