--- a/css/style.css
+++ b/css/style.css
@@ -39,171 +39,24 @@ $profileImgSize: 48;
 $progressStrokeW: 3.5px;
 $pi: 3.14159265;*/
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 html {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-article,
-aside,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section {
-  display: block;
-}
 
 body {
-  margin: 0;
-  background-color: hsla(256, 62%, 19%, 0.69);
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
   line-height: 1.5;
-}
-
-[tabindex="-1"]:focus:not(:focus-visible) {
-  outline: 0 !important;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-abbr[title],
-abbr[data-original-title] {
-  text-decoration: underline;
-  text-decoration: underline dotted;
-  cursor: help;
-  border-bottom: 0;
-  text-decoration-skip-ink: none;
-}
-
-address {
-  margin-bottom: 1rem;
-  font-style: normal;
-  line-height: inherit;
-}
-
-ol,
-ul,
-dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-ol ol,
-ul ul,
-ol ul,
-ul ol {
-  margin-bottom: 0;
-}
-
-dt {
-  font-weight: 700;
-}
-
-dd {
-  margin-bottom: .5rem;
-  margin-left: 0;
-}
-
-blockquote {
-  margin: 0 0 1rem;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -.25em;
-}
-
-sup {
-  top: -.5em;
-}
-
-a {
-  color: #FFAA17;
-  text-decoration: none;
-  background-color: transparent;
-}
-
-a:hover {
-  color: #ca8000;
-  text-decoration: underline;
-}
-
-a:not([href]):not([class]) {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:not([href]):not([class]):hover {
-  color: inherit;
-  text-decoration: none;
-}
-
-pre,
-code,
-kbd,
-samp {
-  font-size: 1em;
-}
-
-.img-fluid {
-  height: 60px;
-  margin-bottom: 30px;
-  width: 60px;
-}
-
-.container-full {
-  padding-left: 0;
-  padding-right: 0;
+  color: var(--gray-dark);
+  background-color: var(--light);
 }
 
 .btn {
-  border: 1px solid #fff;
+  border: 1px solid #1a4460;
   border-radius: 50px;
-  color: #fff;
+  color: #2e95c9;
   font-size: 11px;
   font-weight: 600;
   padding: 15px 40px;
@@ -216,9 +69,9 @@ samp {
 }
 
 .btn-default:hover {
-  color: #fff;
-  background-color: #150b9ddb;
-  border-color: #adadad;
+  color: #f2f9fd;
+  background-color: #2e95c9;
+  border-color: #1a4460;
 }
 
 .fa {
@@ -229,9 +82,9 @@ samp {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #0a14a4de;
+  background: #2e95c9;
   line-height: 1;
-  color: #fff;
+  color: #2e95c9;
   padding: 7px 12px 13px 12px;
   font-size: 16px;
   border-radius: 2px;
@@ -247,7 +100,7 @@ samp {
 }
 
 .back-to-top:focus {
-  background: #aa1e21;
+  background: #2e95c9;
   color: #fff;
   outline: none;
 }
@@ -257,16 +110,17 @@ samp {
   color: #fff;
 }
 
+/*
 .spinner {
   margin: 2px auto 0;
   width: 70px;
   text-align: center;
 }
 
-.spinner>div {
+.spinner {
   width: 14px;
   height: 14px;
-  background-color: #eee;
+  background-color: #2e95c9;
   border-radius: 100%;
   display: inline-block;
   -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
@@ -282,7 +136,7 @@ samp {
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
 }
-
+*/
 /* Test */
 #test {
 	background: #643a7a;
@@ -557,6 +411,7 @@ samp {
 
 
 /* Chatbox */
+/*
 #chatbox {
   overflow: hidden;
   background-image: linear-gradient(to top, #000000 0%, #065784 100%);
@@ -765,7 +620,7 @@ form .textarea textarea:focus::placeholder {
   left: 1.25rem;
   width: 100px;
   height: 100px;
-}
+}*/
 
 #regForm {
   background-color: #ffffff;
