--- a/css/style.css
+++ b/css/style.css
@@ -121,12 +121,24 @@
   }
 
   .fh5co-nav #fh5co-logo img {
+    position: relative;
+    height: 70px;
+    width: 70px;
+    display: inline-block;
     float: left;
-    font-size: 40px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-weight: 700;
-    font-family: "Work Sans", Arial, sans-serif;
+    left: 2px;
+    cursor: pointer;
+  }
+
+  .fh5co-nav #fh5co-logo img:hover {
+    zoom: 2;
+    -webkit-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+
   }
 
   .fh5co-nav #fh5co-logo a span {
