--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,6 @@
 
   .fh5co-nav {
     position: absolute;
-    float: right;
     display: inline-block;
     width: 100%;
     padding: 8px 0;
@@ -121,6 +120,7 @@
   }
 
   .fh5co-nav #fh5co-logo img {
+    zoom: 1;
     position: relative;
     height: 70px;
     width: 70px;
@@ -165,7 +165,6 @@
   }
 
   .fh5co-nav ul li {
-    float: right;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -175,7 +174,6 @@
   .fh5co-nav ul li a {
     font-size: 15px;
     float: right;
-    right: 0;
     padding: 30px 15px;
     color: rgba(255, 255, 255, 0.5);
     -webkit-transition: 0.5s;
