--- a/css/style.css
+++ b/css/style.css
@@ -305,22 +305,38 @@ h4,
 }
 
 .logo img {
+  height: 50px;
   max-width: 100%;
-  position: absolute;
+  position: fixed;
   height: 200px;
-  left: 15px;
+  left: 4px;
+  z-index: 999;
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease;
+  -webkit-backdrop-filter: blur(1rem);
+  backdrop-filter: blur(1rem);
+  -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 991.98px) {
   .logo img {
-    left: 20px;
+    height: 50px;
+    max-width: 100%;
+    position: fixed;
+    left: 4px;
+    z-index: 999;
   }
 }
 
 .logo img a:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
   zoom: 1;
-  text-decoration: none;
-  color: #ffffff;
 }
 
 .menu-absolute {
