--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,45 @@ h4,
   outline: none;
 }
 
+.testimonial-carousel .owl-item img {
+  width: 80px;
+  height: 80px;
+}
+
+.testimonial-carousel .owl-nav {
+  position: absolute;
+  width: 120px;
+  height: 60px;
+  top: 0;
+  right: 0;
+  display: flex;
+  z-index: 1;
+}
+
+.testimonial-carousel .owl-nav .owl-prev,
+.testimonial-carousel .owl-nav .owl-next {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  background: #2878EB;
+  font-size: 22px;
+  transition: .5s;
+}
+
+.testimonial-carousel .owl-nav .owl-prev,
+.testimonial-carousel .owl-nav .owl-next:hover {
+  background: #F14D5D;
+}
+
+.testimonial-carousel .owl-nav .owl-prev:hover {
+  background: #2878EB;
+}
+
+
 .top-bar {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
