--- a/css/style.css
+++ b/css/style.css
@@ -273,39 +273,12 @@ h4,
   }
 }
 
-.spinner-border {
-  color: #136ad5;
-}
-
-/*PRELOADING------------ */
-#overlayer {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 7100;
-  background: #ffffff;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-.loader {
-  z-index: 7700;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
 .top-bar a {
-  color: #ffffff;
+  color: #F6821C;
 }
 
 .logo img {
-  height: 50px;
+  height: 120px;
   max-width: 100%;
   position: fixed;
   height: 200px;
@@ -314,10 +287,29 @@ h4,
 
 @media (max-width: 991.98px) {
   .logo img {
-    height: 50px;
+    height: 120px;
     max-width: 100%;
     position: fixed;
     left: 8px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .logo img {
+    height: 80px;
+    max-width: 100%;
+    position: fixed;
+    left: 4px;
+  }
+  
+}
+
+@media screen and (max-width: 575.98px) {
+  .logo img {
+    height: 60px;
+    max-width: 100%;
+    position: fixed;
+    left: 4px;
   }
 }
 
@@ -999,7 +991,7 @@ bg-1
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.untree_co-hero,
+.hero,
 .bg-img {
   background-size: cover;
   background-position: center center;
